--- a/desk2.html
+++ b/desk2.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <div id="people">
+    <div id="people" class="">
         <div class="people">张大人</div>
         <div class="people">小明</div>
         <div class="people">小李</div>
