--- a/desk2.html
+++ b/desk2.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="mycss/desk2.css"/>
 </head>
 <body>
+<div>
 <div class="container">
     <div id="workSpace">
         <div  class="img mother" id="motherBackground"></div>
         <div  class="img mother" id="mother"></div>
         <div id="chairsArea">
             <div class="title">
-                会议区域
             </div>
             <div id="desk">
             </div>
@@ -31,7 +31,7 @@
     </div>
 </div>
 <!--<div id="p3"></div>-->
-
+</div>
 
 <!--<script src="js/jquery-1.11.3.js"></script>-->
 <script src="js/desk2.js"></script>
