--- a/desk2.html
+++ b/desk2.html
@@ -3,9 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <link rel="stylesheet" href="mycss/jquery-ui.css"/>
+    <!--<script src="//code.jquery.com/jquery-1.9.1.js"></script>-->
     <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
     <link rel="stylesheet" href="mycss/desk2.css"/>
 </head>
@@ -15,13 +14,18 @@
     <div id="workSpace">
         <div  class="img mother" id="motherBackground"></div>
         <div  class="img mother" id="mother"></div>
+        <div class="trash_img" id="trash">
+
+        </div>
         <div id="chairsArea">
             <div class="title">
             </div>
             <div id="desk">
+                <button class="btn">提交</button>
             </div>
         </div>
     </div>
+
     <div id="people" class="">
         <div class="people">张大人</div>
         <div class="people">小明</div>
@@ -33,7 +37,8 @@
 <!--<div id="p3"></div>-->
 </div>
 
-<!--<script src="js/jquery-1.11.3.js"></script>-->
+<script src="js/jquery-1.11.3.js"></script>
+<script src="js/jquery-ui.js"></script>
 <script src="js/desk2.js"></script>
 </body>
 </html>  
