--- a/desk3.html
+++ b/desk3.html
@@ -16,16 +16,12 @@
             <div class="title">
             </div>
             <div id="desk">
+                <button class="btn">提交</button>
             </div>
         </div>
     </div>
 
     <div id="people" class="">
-        <div class="people">张大人</div>
-        <div class="people">小明</div>
-        <div class="people">小李</div>
-        <div class="people">小张</div>
-        <div class="people">小刘</div>
     </div>
 </div>
 <!--<div id="p3"></div>-->
