--- a/desk3.html
+++ b/desk3.html
@@ -30,5 +30,6 @@
 <script src="js/jquery-1.11.3.js"></script>
 <script src="js/jquery-ui.js"></script>
 <script src="js/desk3.js"></script>
+<script src="js/sort.js"></script>
 </body>
 </html>  
