--- a/staffArrange.html
+++ b/staffArrange.html
@@ -9,27 +9,23 @@
     <link rel="stylesheet" href="mycss/desk2.css"/>
 </head>
 <body>
-<div>
 <div class="container">
     <div id="workSpace">
         <div id="chairsArea">
-            <div class="title">
-            </div>
+            <div class="title"></div>
             <div id="desk">
                 <button class="btn">提交</button>
             </div>
         </div>
+        <div id="people" class=""></div>
     </div>
+</div>
 
-    <div id="people" class="">
-    </div>
-</div>
-<!--<div id="p3"></div>-->
-</div>
 
 <script src="js/jquery-1.11.3.js"></script>
 <script src="js/jquery-ui.js"></script>
-<script src="js/desk3.js"></script>
+<script src="js/selfResponse.js"></script>
+<script src="js/staffArrange.js"></script>
 <script src="js/sort.js"></script>
 </body>
-</html>  
+</html>
