--- a/chairArrange.html
+++ b/chairArrange.html
@@ -7,6 +7,7 @@
     <!--<script src="//code.jquery.com/jquery-1.9.1.js"></script>-->
     <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
     <link rel="stylesheet" href="mycss/desk2.css"/>
+    <link rel="stylesheet" href="font/iconfont.css"/>
 </head>
 <body>
     <div class="container">
@@ -19,8 +20,8 @@
                 </div>
             </div>
             <div id="rightArea">
-                <div  class="img mother" id="motherBackground"></div>
-                <div  class="img mother" id="mother"></div>
+                <div  class="img mother iconfont icon-zuowei" id="motherBackground"></div>
+                <div  class="img mother iconfont icon-zuowei" id="mother"></div>
                 <div class="trash_img" id="trash">
                 </div>
             </div>
