--- a/fly.html
+++ b/fly.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="font/iconfont.css"/>
     <style>
         body{
             margin:0;
@@ -11,36 +12,29 @@
         img{
             position:absolute;
         }
+        @font-face {
+            font-family: 'iconfont';
+            src: url('//at.alicdn.com/t/font_1453702746_9938898.eot');
+            src: url('//at.alicdn.com/t/font_1453702746_9938898.eot?#iefix') format('embedded-opentype'),
+            url('//at.alicdn.com/t/font_1453702746_9938898.woff') format('woff'),
+            url('//at.alicdn.com/t/font_1453702746_9938898.ttf') format('truetype'),
+            url('//at.alicdn.com/t/font_1453702746_9938898.svg#iconfont') format('svg');
+        }
+
+        i{
+            font-size: 100px;
+        }
+
+
+
     </style>
 </head>
 <body>
+<i class="iconfont icon-zuowei"></i>
 <h3>随着鼠标拖动而移动的小飞机</h3>
-<img id="p3" src="img/p3.png" alt=""/>
+<!--<img id="p3" src="img/p3.png" alt=""/>-->
 <script>
-    p3.ondragstart=function(e){
-        console.log('事件源p3开始拖动');
-        //记录刚一拖动时，鼠标在飞机上的偏移量  
-        offsetX= e.offsetX;
-        offsetY= e.offsetY;
-    };
-    p3.ondrag=function(e){
-        console.log('事件源p3拖动中');
-        var x= e.pageX;
-        var y= e.pageY;
-        console.log(x+'-'+y);
-        //drag事件最后一刻，无法读取鼠标的坐标，pageX和pageY都变为0  
-        if(x==0 && y==0){
-            return; //不处理拖动最后一刻X和Y都为0的情形  
-        }
-        x-=offsetX;
-        y-=offsetY;
 
-        p3.style.left=x+'px';
-        p3.style.top=y+'px';
-    };
-    p3.ondragend=function(){
-        console.log('源对象p3拖动结束');
-    }
 </script>
 </body>
 </html>  
