--- a/staffArrange.html
+++ b/staffArrange.html
@@ -7,6 +7,8 @@
     <!--<script src="//code.jquery.com/jquery-1.9.1.js"></script>-->
     <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
     <link rel="stylesheet" href="mycss/desk2.css"/>
+    <link rel="stylesheet" href="font/iconfont.css"/>
+
 </head>
 <body>
 <div class="container">
